--- a/assets/style.css
+++ b/assets/style.css
@@ -15,9 +15,7 @@ body {
     grid-template-columns: 250px 1fr;
     min-height: 100vh;
     grid-template-areas:
-    menu contenido contenido
-    menu contenido contenido
-    footer contenido contenido;
+    menu contenido;
 }
 
 /* MENÚ LATERAL */
@@ -28,7 +26,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
     padding: 2rem 1rem;
-    grid-area: menu;
 }
 
 .menu-top h1 {
@@ -80,7 +77,6 @@ body {
     padding: 2rem;
     display: flex;
     flex-direction: column;
-    grid-area: contenido;
 }
 
 .filtros {
